# fastapi-errors-plus

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.ru.md  pyproject.toml  pytest.ini  requirements.txt
docs/: migration-0.9-to-1.0.md
examples/: domain_exceptions.py
fastapi_errors_plus/: __init__.py  _compat.py  _descriptions.py  _dto_adapter.py  _dto_validation.py  _flags_and_profile.py  _legacy_kwargs.py  _merge_engine.py  _standard_errors.py  base.py  error_doc.py  error_profile.py  errors.py  example_utils.py  merge_utils.py  protocol.py
tests/: __init__.py  conftest.py  test_app.py  test_base.py  test_errors.py  test_errors_characterization.py  test_errors_deprecation_warnings.py  test_errors_legacy_kwargs.py  test_integration.py  test_merge_utils.py  test_readme_python_blocks.py  test_release_08.py  test_release_08_edge_cases.py  test_release_09.py  test_release_102.py
tests/fixtures/: errors_characterization_data.py
tests/mypy/: test_protocol_typing.py
